--- a/Questões-adicionais.html
+++ b/Questões-adicionais.html
@@ -1,1 +1,30 @@
 #atividade
+<h1>Titulo primario</h1>
+<h2>Titulo secundário</h2>
+<h3>Titulo terciario</h3>
+<h4>Outro Titulo</h4>
+<h5>Outro Titulo secundario</h5>
+<h6>último nivél</h6>
+
+<p>
+    <!-- Este é um comentário-->
+    <!--
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+    -->
+</p>
+<span> Lorem ipsum dolor sit amet consectetur adipisicing elit. </span>
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+    Facilis, dolorum hic sapiente odit officia maxime, obcaecati asperiores impedit eveniet deserunt molestiae. Porro fugiat explicabo natus deleniti temporibus. Quas, quos placeat.</p>
+    <!--Estilizando o texto-->
+<b>Este texto ficará em negrito</b>
+<br>
+<strong>Este texto ficará em negrito</strong>
+<br>
+<i>Este texto ficará em itálico</i>
+<br>
+<u> Este texto ficará sublinhado </u>
+<br>
+<!--Tags aninhadas/nested tags-->
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque maiores ex obcaecati distinctio facilis totam molestiae <b> <i> suscipit quae et minus! </i> </b>  Aperiam libero modi odio dolores officiis sit possimus recusandae quibusdam.
+</p>
